k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fcg
  labels:
    app.kubernetes.io/part-of: fiap-cloud-games
